<resources>
    <string name="app_name">Learnasaurus</string>
    <string name="app_tagline">little arms, big brains</string>
    <string name="logo_description">This is the Learnasaurus logo</string>
    <string name="app_copy">Learnasaurus&#169; 2017</string>
    <string name="leaderboard_id">CgkIrqu_x-kEEAIQAQ</string>
    <string name="exercise_string">Exercise</string>
    <string name="advanced_exercise_string">Advanced Exercise</string>
    <string name="example_string">Example</string>
    <string name="answer_string">Your Answer:</string>
    <string name="course_string">Please select a course:</string>
    <string name="subject_string">Please select a subject:</string>
    <string name="module_string">Please choose a module:</string>
    <string name="lesson_string">Please choose a lesson:</string>
    <string name="check_answer_button">Check Answers</string>
    <string name="bool_string">boolean</string>
    <string name="byte_string">byte</string>
    <string name="char_string">char</string>
    <string name="double_string">double</string>
    <string name="float_string">float</string>
    <string name="int_string">int</string>
    <string name="long_string">long</string>
    <string name="short_string">short</string>
    <string name="nav_home_option">Home</string>
    <string name="nav_mygrades_option">Achievements</string>
    <string name="nav_leaderboard_option">Leaderboard</string>
    <string name="nav_socialpresence_option">Social</string>
    <string name="nav_about_option">About</string>
    <string name="nav_settings_option">Settings</string>
    <string name="nav_logout_option">Sign Out</string>
    <string name="java_var_dt">Variables and Data Types</string>
    <string name="java_var_what">What are variables?</string>
    <string name="java_var_whata"><![CDATA[
        Variables are a piece of memory which contains data/a value.
        <br/>Instance variables (fields) are a small amount of space where we store data continuously
        within an object.
        <br/><br/>This is how we declare a String variable:
        <br/><br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font color=#0000FF>private</font> String
        <font color=#800080>name</font>;
        <br/><br/>You may be wondering how this can be broken down, let\'s take a look.
        <br/><font color=#0000FF>private</font> is the access modifier for the field/variable.
        <br/>String is the data type of the variable.
        <br/><font color=#800080>name</font> is the name of the variable.
        <br/>; signifies the end of a statement.
    ]]></string>
    <string name="java_var_dtypes">Data Types</string>
    <string name="java_var_primdata"><![CDATA[
    As you know, variables are small amounts of memory in which we store data. A data type allows the
    operating system (Windows, Mac, Linux) to allocate the memory and decide what can be stored in the
    memory.
    <br/><br/>You may have seen words like String or int when using the application, these are
    <b>data types</b>. There are two types of data types in Java; primitive and reference.
    ]]></string>
    <string name="java_var_primitive">Primitive Data Types</string>
    <string name="java_var_primtext">Primitive data types are predefined by the language and are
        named by a keyword (you will recognise these keywords as having blue text in our code examples!).
        There are 8 primitive data types which Java supports. These are:
    </string>
    <string name="java_var_reference">Reference Data Types</string>
    <string name="java_var_refdata"><![CDATA[
    A reference type is a data type which is based on a class rather than a primitive which is
    built into the Java language.
    <br/><br/>A difference between the two types are that reference data types store addresses
    whilst primitive store actual values.
    Another difference is that unlike primitive data types, reference data types can\'t be recognised
    by highlighted keywords but you may already recognise some of them:
    <br/>String, Scanner, Random, etc.
    <br/><br/><br/>Let\'s now look into grouping similar data types together to make it easier to understand
    the type of data each can store.
    ]]></string>
    <string name="java_var_numeric">Numeric Variables</string>
    <string name="java_var_char">Character Based Variables</string>
    <string name="java_var_logic">Logic Variables</string>
    <string name="java_var_chartypes"><![CDATA[
    Character types will look like letters, words or sentences.
    <br/><br/>If you\'ve completed other lessons, you will already be familiar with Strings. Strings are
     often shown as words or sentences. A String looks like <font color=#0cc706>&quot;Hi, how are you?&quot;</font>.
     <br/><br/>Char gets it\'s name from <i>character</i>. A character is one letter. The English
     alphabet has 26 letters OR the English alphabet has 26 characters. A char looks similar to a String -
     <font color=#0cc706>\'A\'</font> with the major difference being the length each type can hold.
     A char can hold one letter whilst a String can hold many!
     <br/>Another key difference you may have not noticed is that Strings use a double quote or speech
     mark (<font color=#0cc706>&quot;</font>) whilst char uses a single quote or apostrophe (<font color=#0cc706>\'</font>).
     <br/><br/>Here\'s how to declare and initialise both a char and a String variable.
     <br/><font color=#0000FF>private char</font> <font color=#800080>myChar</font> = <font color=#0cc706>\'a\'</font>;
     <br/><font color=#0000FF>private</font> String <font color=#800080>myString</font> = <font color=#0cc706>"This is a String"</font>;
     <br/><br/>When we want to store text we will use one of these two character-based variables.
    ]]></string>
    <string name="java_var_logtypes"><![CDATA[
     Logic variables are known as a <b>Boolean</b>. A Boolean variable contains either a true or
     false value.
     <br/>A declaration and initialisation example of a Boolean variable:
     <br/><font color=#0000FF>private boolean</font> <font color=#800080>theSkyIsBlue</font> = <font color=#0000FF>true</font>;
     <br/><font color=#0000FF>private boolean</font> <font color=#800080>theSkyIsRed</font> = <font color=#0000FF>false</font>;
     <br/><br/>An important note: the single equals symbol (<b>=</b>) is an assignment operator.
     This gives a variable its value as you have seen. Another symbol you may see is double equals
     (<b>==</b>). We would use double equals (<b>==</b>) when we want to check if a variable has a
     value of true or false.
     <br/><br/>Booleans allow us to compare variables and values together using Boolean logic such as
     && (AND) or || (OR).
     <br/><br/>The symbol && is the logical AND operator. This operator compares two values (on the
     left and right side of the operator) and will have a result of true if both values are the same or
     false if they are not.
     <br/><br/>The symbol || is the logical OR operator. This operator compares two values (on the
     left and right side of the operator) and will have a result of true if one of the values is true.
     The OR operator gives a result of false if neither of the values being compared are true.
     <br/><br/>Lastly is our logical NOT operator. You will see this as an exclamation mark (<b>!</b>).
     We can use this operator to check if a value doesn\'t equal true or false (<b>!=</b>). This can be
     shortened when checking the value of variable to look like:
     <br/><font color=#0000FF>if</font> (!theSkyIsBlue)
     <br/>In natural English this says, if theSkyIsBlue is false or if the sky is not blue.
     ]]></string>
    <string name="java_var_numtypes"><![CDATA[
    Variables with a numeric data type allow us to store numbers. The majority of Java\'s primitive
    data types are numeric with 6 of the 8 being numeric.
    <br/><i>"If there are so many numerical data types, whats the difference?"</i>
    The data types you will notice more of are int, float and double. The difference between these 3
    data types are the amount of space needed to store the data, the types of values they can hold
    and the precision of the value.
    <br/><br/>An int or float value would take up 4 bytes whereas a double would take up 8 bytes.
    <br/><br/>An int can only store whole numbers. This makes them less precise than float or double.
    This means that a value such as 1, 100 or 10000 is perfectly acceptable.
    <br/><br/>A variable which needs to contain a more precise value such as a number which has a
    decimal point would be much better suited to using a float or double.
    <br/><br/>Let\'s see how we would declare and give values to our numeric variables.
    <br/><font color=#0000FF>private int</font> <font color=#800080>myInt</font> = <font color=#0000FF>320</font>;
    <br/><font color=#0000FF>private float</font> <font color=#800080>myFloat</font> = <font color=#0000FF>34.0f</font>;
    <br/><font color=#0000FF>private double</font> <font color=#800080>myDouble</font> = <font color=#0000FF>15.5</font>;
    <br/><br/>Note the visual difference between a float and a double value. A float has a lowercase f
    following the value whereas a double is just the value.
    ]]></string>
    <string name="java_inheritance_header">Inheritance</string>
    <string name="java_inheritance_intro">Inheritance is also known as Specialisation.</string>
    <string name="java_inheritance_what">What is Inheritance?</string>
    <string name="java_inheritance_whata">Inheritance allows a class to use the properties of another
        class.
        \n\nA child class inherits the states and behaviour from the parent class.
        \n\nThe child is an extension of the parent.
    </string>
    <string name="java_inheritance_java">Inheritance in Java</string>
    <string name="java_inheritance_child">Inheritance in Java works similar to how a child inherits
        features from their parents. You inherit half of your features from your father and the other
        half from your mother.
    </string>
    <string name="java_inheritance_diff">Consider your parents to be one joint entity, Parents.
        \n\nThis will help you understand Java inheritance as Java only allows a child to inherit from
        one parent whilst a parent can have many children, but only one parent.
    </string>
    <string name="java_inheritance_supsub">The child classes are called subclasses and the parent class is
    the superclass.</string>
    <string name="java_inheritance_features">
        In Java, the subclass will be able to access any of the public and protected fields and methods
        that belong to the superclass. This will let the subclass have the same functionality as the
        superclass but also allow it to override the method so that it can implement it\'s own functionality
        which differs from the superclass.
    </string>
    <string name="java_inheritance_extends">Extends Keyword</string>
    <string name="java_inheritance_extends_intro">In order to make a class a subclass of another class
        we must use the keyword extends.\nWe must say that the subclass extends the superclass in the
        class header of the subclass.\n\nHere is an example where GreenApple is the subclass and Apple
        is the superclass.
    </string>
    <string name="java_inheritance_extends_codea"><![CDATA[ <font color=#0000FF>public class </font>
     GreenApple <font color=#0000FF>extends</font> Apple { ]]></string>
    <string name="java_inheritance_extends_exer">Let\'s try an exercise on making a class a subclass.
        \n\nWe have two public classes, Car and Vehicle. Can you write the class header for the appropriate
        subclass?</string>
    <string name="java_inher_ext_hint">Your class header here</string>
</resources>